--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.16.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.4",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
